editor-components/feature/feature4/feature4.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  background-color: var(--composer-html-background);
  background-size: cover;
  background-position: center;

  .max-content {
    .content {
      .featured-card {
        display: flex;
        justify-content: center;
        flex-direction: column;
        gap: var(--composer-gap-sm);
        padding-bottom: var(--composer-gap-lg);

        .section-subtitle {
          margin-top: 0;
          margin-bottom: 0;
        }

        .black {
          color: black;
          &::before{
            background-color: black;
          }
        }

        .section-title {
          margin-top: 0;
          margin-bottom: 0;
        }
        .card-link-container{
          .featured-card-link {
            content: "";
          }

          .featured-card-link-with-image {
            color: black;
            border-bottom-color: black !important;
          }
        }
      }

      .card-item-count,
      .vertical,
      .overlay,
      .overlay-content {
        border-radius: var(--composer-border-radius-sm);
      }

      .card-item-count {
        position: relative;
        background-color: color-mix(in srgb,
            var(--composer-html-background),
            var(--composer-font-color-primary) 5%);

        &:hover .overlay {
          opacity: 1;
        }

        &:hover .vertical {
          opacity: 0;
        }

        .overlay {
          background-position: center;
          background-repeat: no-repeat;
          background-size: cover;
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          color: white;
          text-align: center;
          z-index: 1;
          opacity: 0;
          transition: opacity 0.6s ease;
        }

        .overlay-content {
          width: 100%;
          height: 100%;
          justify-content: center;
          padding: var(--composer-gap-md);
          color: var(--composer-font-color-secondary);
          gap: var(--composer-gap-sm);

          &.apply-overlay {
            background-color: var(--composer-overlay-color);
          }

          .long-text {
            font-size: 1.5rem;
            color: var(--composer-font-color-primary);

            &.image-or-overlay-exist {
              color: var(--text-color-white);
            }
          }

          .overlay-links-container {
            display: flex;
            justify-content: center;
            align-items: center;
            gap: var(--composer-gap-sm);

            .overlay-link {
              content: "";
            }
          }
        }

        .vertical {
          min-height: 250px;
          height: 100%;
          padding: var(--composer-gap-lg) var(--composer-gap-xl);
          transition: opacity 0.6s ease;
          gap: var(--composer-gap-sm);

          .icon-container {
            background-color: var(--composer-primary-color);
            width: 75px;
            height: 75px;
            border-radius: 50%;
            display: flex;
            justify-content: center;
            align-items: center;

            .icon {
              margin: 0;
              width: 50px;
              height: 50px;
              color: var(--composer-font-color-secondary);
            }
          }

          .title {
            color: var(--composer-font-color-primary);
            margin-top: 0;
            margin-bottom: 0;
          }

          .subtitle {
            color: var(--composer-font-color-primary);
            margin-top: 0;
            margin-bottom: 0;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .content {
        gap: var(--composer-gap-sm);

        .card-item-count {
          .vertical {
            padding: var(--composer-gap-md);
            justify-content: center;

            .title {
              font-size: 1rem;
            }

            .subtitle {
              font-size: 1rem;
              text-align: center;
            }
          }
        }
      }
    }
  }
}


@container (max-width: #{$composer-phone-width}) {}

